Added vscode extension and minor change to Powershell Profile

--- a/home/.chezmoiscripts/windows/run_onchange_after_50-configure-vscode.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_onchange_after_50-configure-vscode.ps1.tmpl
@@ -44,6 +44,7 @@ $Extensions = @(
     "github.copilot",
     "github.copilot-chat",
     "esbenp.prettier-vscode",
+    "vsls-contrib.gistfs",
     "ms-vscode.vscode-typescript-next",
     "ms-vscode-remote.vscode-remote-extensionpack"
 )
