--- a/home/.chezmoiscripts/linux/run_onchange_after_10-configure-vscode.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_10-configure-vscode.sh.tmpl
@@ -23,6 +23,7 @@ EXTENSIONS=(
     "github.copilot"
     "github.copilot-chat"
     "esbenp.prettier-vscode"
+    "vsls-contrib.gistfs"
     "ms-vscode.vscode-typescript-next"
 )
 
@@ -34,6 +35,7 @@ EXTENSIONS=(
     "github.copilot"
     "github.copilot-chat"
     "esbenp.prettier-vscode"
+    "vsls-contrib.gistfs"
     "ms-vscode.vscode-typescript-next"
     "ms-vscode-remote.vscode-remote-extensionpack"
 )
